<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
    <!--  -->
    <!-- tools:showIn="navigation_view" -->

    <item
        android:id="@+id/myProfile"
        android:icon="@drawable/ic_my_profile"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/myFests"
        android:icon="@drawable/ic_festivals"
        android:title="@string/my_festivals" />
    <item
        android:id="@+id/createNewFest"
        android:icon="@drawable/ic_new_festival"
        android:title="@string/create_new_festival" />
    <item
        android:id="@+id/jobAuctns"
        android:icon="@drawable/ic_money"
        android:title="@string/job_auctions" />
    <item
        android:id="@+id/printPass"
        android:icon="@drawable/ic_pass"
        android:title="@string/print_pass" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_search"
        android:title="@string/log_out" />

</menu>
