<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
    <!--  -->
    <!-- tools:showIn="navigation_view" -->

        <item
            android:id="@+id/myProfile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/applyForFest"
            android:title="@string/apply_for_a_festival" />
        <item
            android:id="@+id/myEvents"
            android:title="@string/my_events" />
            <item
                android:id="@+id/myJobs"
                android:title="@string/my_jobs" />
            <item
                android:id="@+id/printPass"
                android:title="@string/print_pass" />
            <item
                android:id="@+id/search"
                android:title="@string/search" />

</menu>
