<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient">



    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/organizer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff9360"
            app:popupTheme="@style/AppTheme" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/event_view"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="354dp"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/nameOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/name"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/descOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/locationOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/startTimeOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/endTimeOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/organizerOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organizer"
            android:textSize="21sp" />

    </LinearLayout>


</LinearLayout>