<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/organizerUsername"
            android:layout_width="152dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:text="@string/default_organizer"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/organizerFestival"
            android:layout_width="146dp"
            android:layout_height="38dp"
            android:layout_gravity="start"
            android:text="@string/default_festival"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAcceptOrganizer"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onClickAccept"
        android:text="@string/accept" />

    <Button
        android:id="@+id/btnDeclineOrganizer"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onClickDecline"
        android:text="@string/decline" />
</LinearLayout>